--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -8,6 +8,18 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
+      - uses: actions/cache@v2
+      - name: Declare some variables
+        id: vars
+        shell: bash
+        run: echo "::set-output name=sha_short::$(git rev-parse --short HEAD)"
+        with:
+          path: |
+            ~/.gradle/caches
+            ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle*', '**/gradle-wrapper.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-
       - name: Build leather-api
         run: |
           chmod +x ./gradlew
@@ -17,7 +29,7 @@ jobs:
       - name: Build and push Docker images (with commit-id)
         uses: mr-smithers-excellent/docker-build-push@v4
         with:
-          image: aura/aura-${GITHUB_REF##*/}
+          image: BookMC/leather
           tag: ${{ steps.vars.outputs.sha_short }}
           dockerfile: Dockerfile
           registry: docker.pkg.github.com
@@ -26,7 +38,7 @@ jobs:
       - name: Build and push Docker images (latest)
         uses: mr-smithers-excellent/docker-build-push@v4
         with:
-          image: BookMC/leather-api-${GITHUB_REF##*/}
+          image: BookMC/leather
           tag: latest
           dockerfile: Dockerfile
           registry: docker.pkg.github.com
