--- a/build.gradle
+++ b/build.gradle
@@ -1,11 +1,11 @@
 plugins {
     id "application"
-    id "org.jetbrains.kotlin.jvm" version "1.5.21"
+    id "org.jetbrains.kotlin.jvm" version "1.7.10"
 }
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(16)
+        languageVersion = JavaLanguageVersion.of(18)
     }
 }
 
@@ -19,19 +19,25 @@ repositories {
         url "https://jitpack.io"
     }
     maven {
-        url "https://maven.bookmc.org"
+        url "https://maven.bookmc.org/releases/"
     }
 }
 
 dependencies {
     implementation "io.ktor:ktor-server-core:$ktor_version"
-    implementation "io.ktor:ktor-gson:$ktor_version"
+    implementation "io.ktor:ktor-server-content-negotiation:$ktor_version"
     implementation "io.ktor:ktor-server-netty:$ktor_version"
+    implementation "io.ktor:ktor-server-cors:$ktor_version"
+    implementation "io.ktor:ktor-server-status-pages:$ktor_version"
+    implementation "io.ktor:ktor-serialization-gson:$ktor_version"
+    implementation "io.ktor:ktor-server-call-logging:$ktor_version"
+
     implementation "ch.qos.logback:logback-classic:$logback_version"
     testImplementation "io.ktor:ktor-server-tests:$ktor_version"
     testImplementation "org.jetbrains.kotlin:kotlin-test:$kotlin_version"
 
-    implementation "io.ktor:ktor-client-gson:$ktor_version"
+    implementation "io.ktor:ktor-serialization-gson:$ktor_version"
+    implementation "io.ktor:ktor-client-content-negotiation:$ktor_version"
     implementation("io.ktor:ktor-client-core:$ktor_version") {
         exclude module: "kotlin-stdlib"
         exclude module: "kotlin-stdlib-jdk8"
